# llm-stock-system

./: .env.example  .gitignore  LICENSE  MIGRATE_TO_D_DRIVE.md  PRODUCT_SPEC.md  Procfile  README.md  SCHEMA_MIGRATION_INDEX.md  SCHEMA_MIGRATION_QUICK_REFERENCE.txt  SCHEMA_MIGRATION_WINDOWS.md  SETUP_WINDOWS_VENV.md  VENV_QUICK_SETUP.txt  WINDOWS_EASY_RUN.txt  WINDOWS_QUICK_START.txt  digest_refusal_boundary_v1_1.md  docker-compose.yml  execute_schema_migration.ps1  migrate_to_d_drive.ps1  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run_migration.py  啟動前端.bat  啟動後端.bat  對話紀錄_LLM理財助理專案.docx
api/: index.py
docs/: P0_IMPLEMENTATION_STATUS.md  SCHEMA_MIGRATION_GUIDE.md  architecture.md  codex-prompt-validation-profile.md  current-runtime-pipeline.drawio.xml  phase2-hydrator-refactoring.md  phase3-validation-layer-enhancement.md  phase4-generation-layer-refactoring.md  pre-phase2-adjustments.md  responsibility-distribution.md  validation-profile-design-decisions.md  架構缺口分析文件.md
frontend/: app.py  requirements.txt
scripts/: backfill_embeddings.py  execute_schema_migration.sh  get_sources.ps1  query.ps1  seed_documents.py  sync_finmind.ps1
tests/: test_comparison_queries.py  test_digest_pipeline.py  test_digest_quality_gate.py  test_directional_price_queries.py  test_electricity_cost_impact_queries.py  test_fcf_dividend_sustainability.py  test_financial_health_queries.py  test_forecast_queries.py  test_fundamental_pe_queries.py  test_generation_layer_phase4.py  test_guidance_reaction_queries.py  test_hybrid_retrieval_and_announcement.py  (+28 more)
(+81 files in other folders)
